@@ -8,14 +8,13 @@ import com.abb.bye.client.service.UserAuthorityService;
 import com.abb.bye.mapper.UserAuthorityMapper;
 import com.abb.bye.mapper.UserMapper;
 import com.abb.bye.utils.Md5;
+import org.apache.commons.codec.binary.Base64;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.support.TransactionTemplate;
-import sun.misc.BASE64Encoder;
-
 import javax.annotation.Resource;
 import java.security.SecureRandom;
 import java.util.Random;
@@ -94,6 +93,6 @@ public class UserAuthorityServiceImpl implements UserAuthorityService {
         Random RANDOM = new SecureRandom();
         byte[] salt = new byte[16];
         RANDOM.nextBytes(salt);
-        return new BASE64Encoder().encode(salt);
+        return Base64.encodeBase64String(salt);
     }
 }
